# qlty

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE.md  Makefile.toml  README.md  SECURITY.md  SUPPORT.md  plugins
qlty-analysis/: Cargo.toml  build.rs
qlty-analysis/src/: cache.rs  code.rs  git.rs  lang.rs  lib.rs  report.rs  utils.rs  version.rs  walker.rs  workspace_entries.rs
qlty-analysis/src/code/: file.rs  filter.rs  language_detector.rs  line_index.rs  node_counter.rs  node_ext.rs  query.rs  visitor.rs
qlty-analysis/src/git/: diff.rs  upstream.rs
qlty-analysis/src/lang/: csharp.rs  go.rs  java.rs  javascript.rs  kotlin.rs  php.rs  python.rs  ruby.rs  rust.rs  swift.rs  tsx.rs  typescript.rs  typescript_common.rs
qlty-analysis/src/utils/: fs.rs
qlty-analysis/src/workspace_entries/: all_source.rs  args_source.rs  diff_source.rs  matchers.rs  target_mode.rs  workspace_entry.rs  workspace_entry_finder.rs  workspace_entry_finder_builder.rs
qlty-analysis/src/workspace_entries/matchers/: and_matcher.rs  any_matcher.rs  file_matcher.rs  (+9 more)
qlty-check/: Cargo.toml
qlty-check/src/: cache.rs  command.rs  executor.rs  issue_muter.rs  lib.rs  parser.rs  patch_builder.rs  patcher.rs  planner.rs  processor.rs  report.rs  results.rs  settings.rs  source_reader.rs  tool.rs  ui.rs  utils.rs
qlty-check/src/executor/: driver.rs  invocation_result.rs  invocation_script.rs  staging_area.rs
qlty-check/src/llm/: fixer.rs  mod.rs
qlty-check/src/parser/: actionlint.rs  ast_grep.rs  bandit.rs  biome.rs  clippy.rs  coffeelint.rs  eslint.rs  golangci_lint.rs  hadolint.rs  knip.rs  lsp.rs  markdownlint.rs  mypy.rs  php_codesniffer.rs  phpstan.rs  pylint.rs  radarlint.rs  reek.rs  regex.rs  ripgrep.rs  rubocop.rs  ruff.rs  sarif.rs  shellcheck.rs  sqlfluff.rs  stylelint.rs  taplo.rs  trivy_sarif.rs  trufflehog.rs  tsc.rs
qlty-check/src/planner/: check_filters.rs  config.rs  config_files.rs  document_url_generator.rs  driver.rs  invocation_directory.rs  invocation_plan.rs  level_filter.rs  plan.rs  plugin.rs  plugin_mode_transformer.rs  plugin_workspace_entry_finder_builder.rs  source_extractor.rs  target.rs  target_batcher.rs
qlty-check/src/tool/: command_builder.rs  download.rs  github.rs  go.rs  installations.rs  java.rs  node.rs  null_tool.rs  php.rs  python.rs  ruby.rs  ruby_source.rs  runnable_archive.rs  rust.rs  tool_builder.rs
qlty-cli/: Cargo.toml  build.rs
qlty-cli/src/: allocator.rs  arguments.rs  commands.rs  errors.rs  initializer.rs  lib.rs  logging.rs  main.rs  shell.rs  success.rs  telemetry.rs  ui.rs  upgrade.rs  version.rs
qlty-cli/src/auth/: auth_flow.rs  credentials.rs  mod.rs
qlty-cli/src/commands/: auth.rs  build.rs  cache.rs  check.rs  completions.rs  config.rs  coverage.rs  dashboard.rs  deinit.rs  discord.rs  docs.rs  fmt.rs  githooks.rs  init.rs  install.rs  metrics.rs  panic.rs  parse.rs  patch.rs  plugins.rs  resolve.rs  smells.rs  telemetry.rs  upgrade.rs  validate.rs  version.rs
qlty-cli/src/export/: analysis.rs  mod.rs
qlty-cli/src/format/: mod.rs  sarif.rs
qlty-cli/src/initializer/: activator.rs  initializer.rs  renderer.rs  scanner.rs  settings.rs  sources.rs
qlty-cli/src/shell/: bash.rs  fish.rs  zsh.rs
qlty-cli/src/telemetry/: analytics.rs  git.rs  locale.rs  sanitize.rs  segment.rs
qlty-cli/src/ui/: fixes.rs  format.rs  highlight.rs  invocations.rs  issues.rs  level.rs  messages.rs  source.rs  steps.rs  text.rs  unformatted.rs
qlty-cli/tests/: cmd.rs  helpers.rs  lang.rs  tests.rs
qlty-cloud/: Cargo.toml
qlty-cloud/src/: export.rs  format.rs  lib.rs  token.rs
qlty-cloud/src/auth/: auth_flow.rs  credentials.rs  mod.rs  token.rs
qlty-cloud/src/export/: analysis.rs  coverage.rs
qlty-cloud/src/format/: copy.rs  gz.rs  json.rs  json_each.rs  json_each_truncated.rs  protos.rs
qlty-cloud/src/token/: auth_flow.rs  mod.rs
qlty-config/: Cargo.toml  build.rs  default.toml
qlty-config/src/: config.rs  lib.rs  library.rs  migration.rs  sources.rs  toml_merge.rs  user.rs  version.rs  workspace.rs
qlty-config/src/config/: builder.rs  coverage.rs  download.rs  exclude.rs  exclude_group.rs  file_type.rs  ignore.rs  ignore_group.rs  issue_transformer.rs  language.rs  overrides.rs  plugin.rs  release.rs  smells.rs  source.rs
qlty-config/src/migration/: checks.rs  classic.rs  prepare.rs
qlty-config/src/sources/: default_source.rs  git_source.rs  local_source.rs  source.rs  source_upgrade.rs  sources_list.rs
qlty-coverage/: Cargo.toml
qlty-coverage/src/: ci.rs  env.rs  export.rs  formats.rs  git.rs  lib.rs  macros.rs  parser.rs  print.rs  publish.rs  token.rs  transform.rs  transformer.rs  utils.rs  validate.rs  version.rs
qlty-coverage/src/ci/: buildkite.rs  circleci.rs  codefresh.rs  github.rs  gitlab.rs  semaphore.rs
qlty-coverage/src/parser/: clover.rs  cobertura.rs  coverprofile.rs  jacoco.rs  lcov.rs  qlty.rs  simplecov.rs
qlty-coverage/src/publish/: metrics.rs  plan.rs  planner.rs  processor.rs  reader.rs  report.rs  results.rs  settings.rs  upload.rs
qlty-coverage/src/transform/: plan.rs  planner.rs  processor.rs  settings.rs
qlty-coverage/tests/: clover.rs  cobertura.rs  coverprofile.rs  jacoco.rs  lcov.rs  simplecov.rs  tests.rs
qlty-formats/: Cargo.toml
qlty-formats/src/: copy.rs  gz.rs  json.rs  json_each.rs  json_each_truncated.rs  lib.rs  protos.rs
qlty-llm/: Cargo.toml
qlty-skills/: Cargo.toml
qlty-smells/: Cargo.toml
qlty-smells/src/: lib.rs
qlty-smells/src/duplication/: code.rs  executor.rs  format.rs  mod.rs  plan.rs  planner.rs  settings.rs  transformers.rs  visitor.rs
qlty-smells/src/metrics/: executor.rs  lines.rs  metrics.rs  mod.rs  plan.rs  planner.rs  processor.rs  results.rs  settings.rs
qlty-smells/src/structure/: checks.rs  executor.rs  mod.rs  plan.rs  planner.rs
qlty-test-utilities/: Cargo.toml
qlty-test-utilities/src/: git.rs
qlty-types/: Cargo.toml
qlty-types/src/: lib.rs
qlty-types/src/protos/: qlty.analysis.v1.rs  qlty.analysis.v1.serde.rs  qlty.tests.v1.rs  qlty.tests.v1.serde.rs
(+1336 files in other folders)
