[package]
name = "qlty-analysis"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license-file.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
config.workspace = true
git2.workspace = true
glob.workspace = true
globset.workspace = true
ignore.workspace = true
md5.workspace = true
lazy_static.workspace = true
path-absolutize.workspace = true
pbjson-types.workspace = true
qlty-config.workspace = true
qlty-types.workspace = true
rand.workspace = true
rayon.workspace = true
regex.workspace = true
semver.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
time.workspace = true
tracing.workspace = true
tree-sitter.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-kotlin.workspace = true
tree-sitter-php.workspace = true
tree-sitter-python.workspace = true
tree-sitter-ruby.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-typescript.workspace = true

[dev-dependencies]
insta.workspace = true
qlty-test-utilities.workspace = true
itertools.workspace = true
