[package]
name = "qlty-check"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license-file.workspace = true
edition.workspace = true

[lib]
doctest = false

[features]
docker = []

[dependencies]
anyhow.workspace = true
ar.workspace = true
chrono.workspace = true
config.workspace = true
console.workspace = true
diffy.workspace = true
duct.workspace = true
flate2.workspace = true
fs_extra.workspace = true
fslock.workspace = true
globset.workspace = true
ignore.workspace = true
indicatif.workspace = true
itertools.workspace = true
lzma-rs.workspace = true
num_cpus.workspace = true
once_cell.workspace = true
path-absolutize.workspace = true
prost.workspace = true
qlty-analysis.workspace = true
qlty-cloud.workspace = true
qlty-config.workspace = true
qlty-types.workspace = true
rand.workspace = true
rayon.workspace = true
regex.workspace = true
semver.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
serde.workspace = true
sha2.workspace = true
shell-escape.workspace = true
sysinfo.workspace = true
tar.workspace = true
tempfile.workspace = true
tracing.workspace = true
ureq.workspace = true
url.workspace = true
zip.workspace = true

[dev-dependencies]
assert-json-diff.workspace = true
indoc.workspace = true
insta.workspace = true
qlty-test-utilities.workspace = true
tracing-test.workspace = true
