[package]
name = "qlty-cloud"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
qlty-config.workspace = true
ureq.workspace = true
qlty-types.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile.workspace = true
insta.workspace = true
