[package]
name = "qlty-config"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true

[[bin]]
name = "qlty-config-generate-schema"
path = "src/bin/generate_schema.rs"

[lib]
doctest = false

[build-dependencies]
chrono.workspace = true

[dependencies]
anyhow.workspace = true
config.workspace = true
console.workspace = true
git2.workspace = true
glob.workspace = true
globset.workspace = true
ignore.workspace = true
lazy_static.workspace = true
md5.workspace = true
qlty-plugins.workspace = true
qlty-types.workspace = true
rayon.workspace = true
schemars.workspace = true
semver.workspace = true
serde_with.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
serde.workspace = true
toml_edit.workspace = true
toml.workspace = true
tracing.workspace = true
ureq.workspace = true
url.workspace = true
walkdir.workspace = true

[package.metadata.dist]
dist = false