[package]
name = "qlty-coverage"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license-file.workspace = true
edition.workspace = true

[[test]]
name = "integration"
path = "tests/tests.rs"

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
cli-table.workspace = true
console.workspace = true
git2.workspace = true
globset.workspace = true
indicatif.workspace = true
lazy_static.workspace = true
pbjson-types.workspace = true
qlty-analysis.workspace = true
qlty-cloud.workspace = true
qlty-config.workspace = true
qlty-types.workspace = true
regex.workspace = true
semver.workspace = true
serde_json.workspace = true
serde-xml-rs.workspace = true
serde.workspace = true
time.workspace = true
ureq.workspace = true

[dev-dependencies]
insta.workspace = true
