[package]
name = "qlty-llm"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true

[lib]
doctest = false
test = true
