[package]
name = "qlty-smells"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
console.workspace = true
globset.workspace = true
md5.workspace = true
qlty-analysis.workspace = true
qlty-config.workspace = true
qlty-types.workspace = true
rayon.workspace = true
serde.workspace = true
similar.workspace = true
tracing.workspace = true
tree-sitter.workspace = true

[dev-dependencies]
bencher.workspace = true
insta.workspace = true
