[package]
name = "qlty-test-utilities"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true

[lib]
test = false
doctest = false

[dependencies]
git2.workspace = true
tempfile.workspace = true

[package.metadata.dist]
dist = false

[package.metadata.release]
publish = false
push = false
tag = false
